# bitclone

./: BUILD  CMakeLists.txt  MODULE.bazel
.github/workflows/: main.yml
ideas-with-AI/: CHAT1.md  design_log.md  implementation_summary.md  put_get_operations_design.md
src/: FileEntry.cc  FileEntry.h  LogIndex.h  LogReader.cc  LogReader.h  LogWriter.cc  LogWriter.h  main.cpp
src/bitcask/: BitcaskConfig.h  BitcaskStore.cpp  BitcaskStore.h  FileMetadata.h  README.md  StoreStats.h
src/byte_buffer/: BytesBuffer.cc  BytesBuffer.h
src/file_handler/: FIleHandler.h  FileHandler.h  LogIndex.h  LogReader.h  LogWriter.h
src/keydir/: KeyDir.h  KeyDirEntry.h  README.md
src/lru_cache/: DoublyLinkedList.cc  DoublyLinkedList.h  HashMap.cc  HashMap.h  LRUCache.cc  LRUCache.h
tests/cpp/bitcask/: test_bitcask_store.cc  test_delete_operation.cc  test_file_rotation.cc  test_get_operation.cc  test_put_operation.cc
tests/cpp/file_handler/: test_file_handler.cc  test_log_reader.cc  test_log_writer.cc
tests/cpp/keydir/: test_keydir.cc
tests/cpp/lru_cache/: test_hash_map.cc
tests/lru_cache/: test_doubly_linked_list.cc  test_hash_map.cc  test_lru_cache.cc
